refactor(item): 重构词条类型和装备系统相关代码
- 将AffixType中的isSpecial方法移动到类末尾位置
- 移除AttributeType中的fromChineseName静态方法
- 重新排列CultivationCommandHandler中AuthResult记录类的位置
- 移除BaseCommandHandler中的无参构造函数注解
- 优化CultivationCommandHandler中的字符串拼接逻辑
- 简化formatAttributeAllocationResult等格式化方法的实现
- 移除EquipmentGenerator类及其相关功能
- 调整EquipmentRepository接口中的批量操作方法
- 更新探索服务中智慧等级判断条件的写法
- 移除Fudi实体中的一些业务计算方法